# test-lurk-hs

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  Setup.hs  cabal.project  example-lurk-hs.cabal  test-lurk-hs.cabal
app/: Main.hs
assets/: empty.json  epoch_change.json  fibonacci_fixture.json  inclusion_fixture.json
src/: Utils.hs  Verify.hs
test/: Main.hs  MainIndirect.hs
