cabal-version:      3.0
name:               example-lurk-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             rsoeldner
maintainer:         r.soeldner@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable example-lurk-hs
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0, plonk-verify
    hs-source-dirs:   app
    default-language: Haskell2010
