cabal-version: 3.0
name: test-lurk-hs
version: 0.1.0.0
synopsis: Tests and acceptance criteria for https://github.com/argumentcomputer/lurk-hs
license: BSD-3-Clause
license-file: LICENSE
author: rsoeldner
maintainer: r.soeldner@gmail.com
copyright: Copyright (C) 2024 Kadena LLC
build-type: Custom

extra-doc-files:
  CHANGELOG.md
  README.md

data-files:
  assets/*.json
  verifier-assets/vk.bin

custom-setup
    setup-depends:
        , Cabal
        , base

common warnings
 ghc-options: -Wall

library
  import: warnings
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    , aeson >=2.2
    , base
    , base16-bytestring >=0.1
    , bytestring >=0.12
    , plonk-verify
    , text >=2.1
    , microlens-th
  exposed-modules:
    Verify
    Utils

executable example-lurk-hs
  import: warnings
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs: app
  build-depends:
    , base
    , test-lurk-hs

test-suite lurk-hs-tests
  import: warnings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , plonk-verify
    , aeson >=2.2
    , base
    , hspec >=2.11
    , test-lurk-hs

test-suite test-indirect
  import: warnings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: MainIndirect.hs
  build-depends:
    , base
    , hspec >=2.11
    , test-lurk-hs
    , microlens-th
